src/test/ui/extern-flag/multiple-opts.stderr
error[E0425]: cannot find function `somefun` in `somedep`
  --> $DIR/multiple-opts.rs:19:14
   |
LL |     somedep::somefun();
   |              ^^^^^^^ not found in `somedep`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
